# ESC-Control

./: Makefile.am  Makefile.in  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  traces.1
src/: Makefile.am  Makefile.in  main.c  main.c~
